Update UI for All screens

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Lokal Jobs</string>
+
+    <string name="jd">This position reports to the Human Resources (HR) director and
+interfaces with company managers and HR staff. Company XYZ is
+committed to an employee-orientated, high performance culture that
+emphasizes empowerment, quality, continuous improvement, and the
+recruitment and ongoing development of a superior workforce.</string>
 </resources>
